cna-express/service.yaml
#service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cna-express
spec:
  type: ClusterIP
  selector:
    app: cna-express
  ports:
    - port: 80 # SERVICE exposed port
      name: http # SERVICE port name
      protocol: TCP # The protocol the SERVICE will listen to
      targetPort: 4000
